--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,13 +15,16 @@
 
 </head>
 <body>
-<div class="pure-menu pure-menu-horizontal">
+<div class="pure-menu pure-menu-horizontal menu-bordereau">
     <div class="pure-g">
-        <div class="pure-u-1-2">
+        <div class="pure-u-1-3">
             <img src="{{ asset('img/logo.png') }}" id="base-logo">
         </div>
+        <div class="pure-menu-list pure-u-1-3 base-titre">
+            <h1>Sortie.com</h1>
+        </div>
         {% if app.user %}
-            <ul class="pure-menu-list pure-u-1-2" id="base-button">
+            <ul class="pure-menu-list pure-u-1-3" id="base-button">
                 {% if is_granted('ROLE_ADMIN') %}
                     <li class="pure-menu-item">
                         <a href="{{ path('ville') }}" class="pure-menu-link">Villes</a>
@@ -34,7 +37,7 @@
                     <a href="{{ path('home') }}" class="pure-menu-link">Accueil</a>
                 </li>
                 <li class="pure-menu-item">
-                    <a href="{{ path('participant_show', {"id" : app.user.id}) }}" class="pure-menu-link">Mon profil</a>
+                    <a href="{{ path('participant_edit', {"id" : app.user.id}) }}" class="pure-menu-link">Mon profil</a>
                 </li>
                 <li class="pure-menu-item">
                     <a href="{{ path('app_logout') }}" class="pure-menu-link">Se déconnecter</a>
