--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,7 +50,7 @@
 
 
 #date_compte{
-    margin-left: 75vw;
+    margin-left: 70vw;
 }
 
 
@@ -59,10 +59,12 @@
     margin-right: 5%;
 }
 
+/*
+    //  ajoute une icone dans les date picker field
 [type="date"] {
     background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  90% 50% no-repeat ;
 }
-
+*/
 .centered{
     text-align: center;
     justify-content: center;
