--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -66,7 +66,9 @@
 
 
             <div id="tableau-sortie">
-
+                <div class="pure-u-1 pure-control-group">
+                    <label class="m10" for="checkbox-passee"><strong>Filtrer par :</strong> {{ labelFiltre }}</label>
+                </div>
                 <table class="pure-table pure-u-1-1 fixed_header" id="home-liste-sortie" style="">
                     <thead>
                     <tr>
