#2008-update- modif affichage profil

--- a/templates/participant/show.html.twig
+++ b/templates/participant/show.html.twig
@@ -16,24 +16,21 @@
         <legend>Profil d'un participant</legend>
 
             <div class="pure-control-group">
-                <label>Pseudo</label>
-                <input class="displayer" disabled value="{{ participant.pseudo }}">
+                <h2 class="base-titre" > pseudo : {{ participant.pseudo }}</h2>
+
             </div>
             <div class="pure-control-group">
-                <label>Nom</label>
-                <input class="displayer" disabled value="{{ participant.nom }}">
+                <h2 class="base-titre">Nom : {{ participant.nom }}</h2>
+
             </div>
             <div class="pure-control-group">
-                <label>Prenom</label>
-                <input class="displayer" disabled value="{{ participant.prenom }}">
+                <h2 class="base-titre">Prenom : {{ participant.prenom }}</h2>
             </div>
             <div class="pure-control-group">
-                <label>Telephone</label>
-                <input class="displayer" disabled value="{{ participant.telephone }}">
+                <h2 class="base-titre">Téléphone : {{ participant.telephone }}</h2>
             </div>
             <div class="pure-control-group">
-                <label>Email</label>
-                <input class="displayer" disabled value="{{ participant.email }}">
+                <h2 class="base-titre">Email : {{ participant.email }}</h2>
             </div>
 
         <div class="pure-controls">
