UPDATE #2010 - front modification (doing)

--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Modifier une sortie{% endblock %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/modification.css') }}.css">
+{% endblock %}
+
 {% block body %}
 
         <form method="post" class="pure-form pure-form-aligned"
