--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 <div class="pure-menu pure-menu-horizontal menu-bordereau">
     <div class="pure-g">
         <div class="pure-u-1-3">
-            <img src="{{ asset('img/logo.png') }}" id="base-logo">
+            <a href="{{ path('home') }}"><img src="{{ asset('img/logo.png') }}" id="base-logo"></a>
         </div>
         <div class="pure-menu-list pure-u-1-3 base-titre">
             <h1>Sortie.com</h1>
