--- a/templates/sortie/sortie.html.twig
+++ b/templates/sortie/sortie.html.twig
@@ -63,6 +63,12 @@
                         <label>Longitude</label>
                         <label class="displayed">{{ sortie.lieu.longitude }}</label>
                     </div>
+                    {% if sortie.etat.id == 6 %}
+                    <div class="creation-champs pure-control-group">
+                        <label>Motif d'annulation</label>
+                        <label class="displayed">{{ sortie.annulationSortie.libelle }}</label>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </fieldset>
