--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -11,7 +11,7 @@
         <div id="date_compte" class="pure-u-1-5 pure-form-aligned pure-form-aligned">
             <div class="pure-control-group mt1">
                 <label>Date du jour </label>
-                <label class="displayed">{{ "now"|format_datetime(locale='fr') }}</label>
+                <label class="displayed">{{ "now"|format_date(locale='fr') }}</label>
             </div>
             <div class="pure-control-group mt1">
                 <label>Participant </label>
