--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
     {% endblock %}
 
 </head>
-<body>
+<body onload="errorAlert('{{ error }}')">
 <div class="pure-menu pure-menu-horizontal menu-bordereau">
     <div class="pure-g">
         <div class="pure-u-1-3">
@@ -50,4 +50,5 @@
 
 {% endblock %}
 </body>
+<script src="{{ asset('js/error.js') }}"></script>
 </html>
