--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -24,6 +24,9 @@
                             {{ form_row(formUpdate.dateHeureDebut) }}
                         </div>
                         <div class="creation-champs pure-control-group">
+                            {{ form_row(formUpdate.dateLimiteInscription) }}
+                        </div>
+                        <div class="creation-champs pure-control-group">
                             {{ form_row(formUpdate.duree) }}
                         </div>
                         <div class="creation-champs pure-control-group">
@@ -35,11 +38,12 @@
                     </div>
                     <div class="pure-u-1-2">
                         <div class="creation-champs pure-control-group">
-                            {{ form_row(formUpdate.dateLimiteInscription) }}
+                            {{ form_row(formUpdate.lieu.ville) }}
                         </div>
                         <div class="creation-champs pure-control-group">
                             {{ form_row(formUpdate.lieu.nom,  { 'label': 'Lieu' }) }}
                         </div>
+                        ICI FAUT FAIRE AFFICHER OU NOUVEAU LIEU ????
                         <div class="creation-champs pure-control-group">
                             {{ form_row(formUpdate.lieu.rue) }}
                         </div>
@@ -50,9 +54,6 @@
                             {{ form_row(formUpdate.lieu.longitude) }}
                         </div>
                         <div class="creation-champs pure-control-group">
-                            {{ form_row(formUpdate.lieu.ville) }}
-                        </div>
-                        <div class="creation-champs pure-control-group">
                             {{ form_row(formUpdate.site) }}
                         </div>
                         {{ form_rest(formUpdate) }}
@@ -60,19 +61,11 @@
                 </div>
 
             </fieldset>
-            <div class="pure-g">
-                <div class="pure-u-sm-1-6" >
-                    <button class="pure-button pure-button-primary" type="submit">Modifier</button>
-                </div>
-                <div class="pure-u-sm-2-6">
-                    <a href="{{ path('sortie_publication', {"id" : sortie.id}) }}"><button class="pure-button pure-button-primary" type="button">Publier la sortie</button></a>
-                </div>
-                <div class="pure-u-sm-2-6">
-                    <a href="{{ path('sortie_suppression', {"id" : sortie.id}) }}"><button class="pure-button pure-button-primary" type="button">Supprimer la sortie</button></a>
-                </div>
-                <div class="pure-u-sm-1-6">
-                    <a href="{{ path('home') }}"><button class="pure-button pure-button-primary" type="button">Annuler</button></a>
-                </div>
+            <div class="pure-controls">
+                <button class="pure-button button-primary" type="submit">Modifier</button>
+                <a class="pure-button button-primary" href="{{ path('sortie_publication', {"id" : sortie.id}) }}">Publier la sortie</a>
+                <a class="pure-button button-primary" href="{{ path('sortie_suppression', {"id" : sortie.id}) }}">Supprimer la sortie</a>
+                <a class="pure-button button-primary" href="{{ path('home') }}">Annuler</a>
             </div>
         </form>
 {% endblock %}
