--- a/templates/sortie/sortieCreation.html.twig
+++ b/templates/sortie/sortieCreation.html.twig
@@ -78,7 +78,12 @@
     </form>
     <input type="hidden" value="{{ lieuxdonnees }}" id="hidden">
     <script>
-        document.getElementById('select-creation').addEventListener("change", () => {
+        window.onload = function() {
+            changementInfoLieu();
+        };
+        document.getElementById('select-creation').addEventListener("change", changementInfoLieu);
+
+        function changementInfoLieu(){
             select = document.getElementById('select-creation').getElementsByTagName("select");
             for(i = 0; i < select.length; i++){
                 choix = select[i].value;
@@ -96,6 +101,6 @@
                 document.getElementById("latitude-holder").innerText = trouver.latitude;
                 document.getElementById("longitude-holder").innerText = trouver.longitude;
             }
-        });
+        }
     </script>
 {% endblock %}
