--- a/templates/participant/show.html.twig
+++ b/templates/participant/show.html.twig
@@ -4,12 +4,7 @@
 
 {% block body %}
 
-    <div class="pure-form pure-form-aligned"
-         style="	position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%,-50%);
-    ">
+    <div class="pure-form pure-form-aligned centred-conteneur">
     <fieldset>
         <legend>Profil de '<strong>{{ participant.pseudo }}</strong>'</legend>
             <div class="pure-control-group">
