--- a/templates/sortie/sortieAnnulation.html.twig
+++ b/templates/sortie/sortieAnnulation.html.twig
@@ -6,12 +6,7 @@
     <link href="{{ asset('css/annulation.css') }}" rel="stylesheet">{% endblock %}
 
 {% block body %}
-    <div class="pure-form pure-form-aligned"
-         style="	position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%,-50%);
-    ">
+    <div class="pure-form pure-form-aligned centred-conteneur">
         <fieldset>
             <legend>Annuler une sortie</legend>
 
