--- a/templates/sortie/sortieCreation.html.twig
+++ b/templates/sortie/sortieCreation.html.twig
@@ -8,12 +8,7 @@
 {% endblock %}
 
 {% block body %}
-    <form method="post" class="pure-form pure-form-aligned"
-          style="	position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%,-50%);
-    ">
+    <form method="post" class="pure-form pure-form-aligned centred-conteneur">
         <fieldset>
             <div class="example-wrapper pure-g">
                 <div class="pure-u-1-2">
