--- a/templates/sortie/sortieModificationAvecLieu.html.twig
+++ b/templates/sortie/sortieModificationAvecLieu.html.twig
@@ -8,12 +8,7 @@
 
 {% block body %}
 
-    <form method="post" class="pure-form pure-form-aligned"
-          style="	position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%,-50%);
-    ">
+    <form method="post" class="pure-form pure-form-aligned centred-conteneur">
         <fieldset class="pure-g">
             <div class="pure-g">
                 <div class="pure-u-1-2">
@@ -54,6 +49,8 @@
                 </div>
             </div>
         </fieldset>
+    </form>
+    <div class="centred-conteneur">
         <div class="pure-controls">
             <button class="pure-button button-primary" type="submit">Modifier</button>
             <a class="pure-button button-primary" href="{{ path('sortie_publication', {"id" : sortie.id}) }}">Publier la
@@ -62,5 +59,5 @@
                 la sortie</a>
             <a class="pure-button button-primary" href="{{ path('home') }}">Annuler</a>
         </div>
-    </form>
+    </div>
 {% endblock %}
