--- a/templates/participant/_form.html.twig
+++ b/templates/participant/_form.html.twig
@@ -45,6 +45,9 @@
             {{ form_widget(form.newPassword.second) }}
             {{ form_errors(form.newPassword.second) }} #}
         </div>
+
+        <legend></legend> <!-- make space beetween fields-->
+        
         <div class="pure-control-group">
             <label>Site</label>
             <label class="displayed">{{ participant.site.nom }}</label>
