--- a/templates/sortie/sortieCreation.html.twig
+++ b/templates/sortie/sortieCreation.html.twig
@@ -5,11 +5,19 @@
 {% block stylesheets %}
     <link href="{{ asset('css/sortieCreation.css') }}" rel="stylesheet">
 
+    <!-- DatePicker Import -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.14.1/moment.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 {% endblock %}
 
 {% block body %}
     <form method="post" class="pure-form pure-form-aligned"
-          style="	position: absolute;
+          style="
+                position: absolute;
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%,-50%);
@@ -103,7 +111,7 @@
                 format: "YYYY-MM-DD hh:mm:ss",
             });
             $('#datetimepicker2').datetimepicker({
-                    format: "YYYY-MM-DD hh:mm:ss",
+                format: "YYYY-MM-DD hh:mm:ss",
             });
         });
     </script>
